# PolyResearch

./: .env.example  AGENTS.md  README.md  implementation_plan.md  polyresearch.db  pyproject.toml
docs/: evidence-policy.md
src/polyresearch/: cli.py  configuration.py  graph.py  prompts.py  provenance_graph.py  report_qa.py  search_providers.py  security.py  source_ingestion.py  source_quality.py  state.py  utils.py
src/polyresearch/evidence/: __init__.py  claim_clustering.py  entity_resolution.py  provenance_graph.py  report_qa.py  value_normalization.py  verification_confidence.py  verification_results.py
src/polyresearch/models/: __init__.py  evidence.py  graph_state.py  provenance_graph.py  research_run.py  structured_outputs.py
tests/: test_adversarial_verification.py  test_bailian_activation.py  test_claim_clustering.py  test_cli_ledger.py  test_end_to_end_evidence_flow.py  test_entity_resolution.py  test_evidence_contracts.py  test_logging.py  test_model_configuration.py  test_multilingual_planner.py  test_orchestration_topology.py  test_provenance_graph.py  test_report_qa.py  test_report_two_stage.py  test_retry.py  test_run_context.py  test_security_controls.py  test_source_deduplication.py  test_source_ingestion.py  test_source_quality.py  test_sqlite_repository.py  test_supervisor_limit.py  test_tavily_ingestion.py  test_typed_downstream.py  test_unresolved_disagreements.py  test_value_normalization.py  test_verification_attempts.py  test_verification_confidence.py  test_verification_evidence_links.py
tests/fixtures/: multilingual_planner_cases.json
(+22 files in other folders)
