[project]
name = "polyresearch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Zhi Qiang", email = "chng1401@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.14.1",
    "langchain>=1.3.14",
    "langchain-openai>=1.1.0",
    "langchain-mcp-adapters>=0.3.0",
    "langgraph>=1.2.9",
    "mcp>=1.28.1",
    "pydantic>=2.13.4",
    "tavily>=1.1.0",
]

[project.scripts]
polyresearch = "polyresearch.cli:main"

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
